--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,133 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: url("assets/images/bg-01.jpg") 100% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
+
+.login, .welcome {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 70vh;
+  width: 50vw;
+  background-color: white;
+  border-radius: 20px;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  font-size: 64px;
+  align-items: center;
+  justify-content: center;
+  height: 15vh;
+}
+
+
+.socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 35vw;
+}
+
+.social {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 16vw;
+  height: 8vh;
+  border: 1px grey solid;
+  border-radius: 8px;
+  font-weight: bold;
+  font-size: 24px; 
+}
+
+.logo {
+  width: 4vh;
+  height: 4vh;
+  margin-right: 1vw;
+}
+
+#facebook {
+  background-color: #3C5A9A;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#google {
+  background-color: white;
+  color: grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  color: red;
+  font-size: 24px;
+  margin-top: 2vh;
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  width: 35vw;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
+}
+
+.actionLabel {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.fieldLabel {
+  margin-bottom: 1vh;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.forgot {
+  color: grey;
+  font-size: 20px;
+}
+
+.textField {
+  height: 6vh;
+  width: 35vw;
+  font-size: large;
+  border-radius: 8px;
+  border: 1px solid grey;
+}
+
+.inputButton {
+  background-color: #343434;
+  height: 6vh;
+  width: 35vw;
+  font-size: large;
+  border-radius: 8px;
+  border: 1px solid grey;
+  color: white;
+  font-weight: bold;
+}
+
+.signUp {
+  display: flex;
+  flex-direction: column;
+  font-weight: bolder;
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
+  margin-top: 5vh;
+  color: grey;
 }
